# openmp-sample-travis

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
